Updated Java code on pages "Computing Wikipedia's internal PageRanks", "Windows timestamp accessor library".